<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/pc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_margin="20dp"
        android:id="@+id/test_text_feld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Results"
        android:textColor="@color/text1"
        android:gravity="center"
        android:textSize="50dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/filter_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/meal_finding_header1"
        app:layout_constraintTop_toBottomOf="@id/test_text_feld"
        app:layout_constraintBottom_toTopOf="@id/filter_ll"
        />

    <LinearLayout
        android:id="@+id/filter_ll"
        android:background="@color/pc"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/filter_tv"
        android:gravity="center_horizontal"
        >
        <Switch
            android:textColor="@color/text1"
            android:textSize="20dp"
            android:id="@+id/veganSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan_switch"
            />
        <Switch
            android:textColor="@color/text1"
            android:textSize="20dp"
            android:id="@+id/vegatarianScwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian_switch"
            />
        <Switch
            android:textColor="@color/text1"
            android:textSize="20dp"
            android:id="@+id/anyAllSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any_all_switch"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="10dp"
        android:background="@color/pclight"
        android:layout_marginTop="20dp"
        android:id="@+id/recipe_names"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/filter_ll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

</androidx.constraintlayout.widget.ConstraintLayout>