<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/pc"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pc"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_finding_header2"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:background="@color/sclight"
            android:id="@+id/ingredients_finding_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:maxLines="1"
            android:inputType="text"
            android:text="Search here"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textColor="@color/text1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredients_recylcer_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:background="@color/pclight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_finding_header3"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_ingredients_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:background="@color/pclight"/>


        <Button
            android:backgroundTint="@color/scdark"
            android:id="@+id/convertButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="30dp"
            android:text="@string/convert_button"
            android:textSize="20dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>