<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@color/pc"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredients"
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:gravity="center"/>
            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/pclight"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/ingredients_working"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="20dp">
                <Button
                    android:backgroundTint="@color/scdark"
                    android:id="@+id/add_ingredient_button"
                    android:layout_width="0dp"
                    android:layout_weight="15"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/add_new_ingredient"/>
                <EditText
                    android:id="@+id/add_ingredient_et"
                    android:layout_weight="20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/sclight"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_ll_construct"
                android:background="@color/pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/filter_tv"
                android:gravity="center_horizontal"
                >
                <Switch

                    android:textSize="25dp"
                    android:id="@+id/veganSwitchConstruct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan_switch"
                    android:textColor="@color/text1"
                    />
                <Switch
                    android:textSize="25dp"
                    android:id="@+id/vegatarianSwitchConstruct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian_switch"
                    android:textColor="@color/text1"
                    />
            </LinearLayout>

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Workingsteps"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="25dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/pclight"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/working_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mealname"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
            <EditText
                android:background="@color/sclight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meal_name_ET"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <Button
                    android:backgroundTint="@color/scdark"
                    android:id="@+id/add_working_step_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Add Working Step"
                    android:layout_marginRight="20dp"/>
                <Button
                    android:backgroundTint="@color/scdark"
                    android:id="@+id/continue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Continue"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>